--- a/src/components/Form/FormField.scss
+++ b/src/components/Form/FormField.scss
@@ -50,6 +50,20 @@
 		min-width: 25px;
 		fill: global.$inactive-color;
 	}
+
+	// &:has(:valid) {
+	// 	border: 4px solid global.$green !important;
+	// 	svg {
+	// 		fill: global.$green !important;
+	// 	}
+	// }
+
+	// &:has(:invalid) {
+	// 	border: 4px solid global.$red !important;
+	// 	svg {
+	// 		fill: global.$red !important;
+	// 	}
+	// }
 }
 
 .form-field:hover {
@@ -63,7 +77,7 @@
 }
 
 .form-field.focused {
-	border: 4px solid global.$button-main-color !important;
+	border: 4px solid global.$button-main-color;
 	label {
 		color: global.$text-color-essential;
 	}
