--- a/src/components/Order/OrderTotal.scss
+++ b/src/components/Order/OrderTotal.scss
@@ -30,6 +30,7 @@
 		flex: 1;
 		padding: 7px;
 		font-size: 1rem;
+		min-width: max-content;
 	}
 }
 
