--- a/src/components/Orders/Orders.scss
+++ b/src/components/Orders/Orders.scss
@@ -1,3 +1,4 @@
+@use '../../index.scss' as global;
 $cell-padding: 5px;
 
 .orders {
@@ -12,7 +13,7 @@ $cell-padding: 5px;
 			th {
 				padding: $cell-padding + 8px $cell-padding;
 			}
-			background-color: var(--title-background-color);
+			background-color: global.$button-main-color;
 			:hover {
 				background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0 0);
 			}
