--- a/src/index.scss
+++ b/src/index.scss
@@ -4,11 +4,13 @@ $secondary-color: #141432;
 $tertiary-color: #0b0b1c;
 $button-main-color: #524eee;
 $inactive-color: rgb(100 116 139);
+$active-color: #499d2f;
 $text-color-primary: white;
 $text-color-inessential: #94a3b8;
 $text-color-essential: #cbd5e1;
 $gap: 15px;
 $red: #ef4444;
+$green: #16a34a;
 $z-index-modal: 10;
 $z-index-footer: 9;
 
@@ -18,14 +20,7 @@ $z-index-footer: 9;
 	padding: 0;
 	font-family: Poppins;
 	transition: 75ms;
-	--background-main: #1d1d42;
-	--background-secondary: #141432;
-	--border-radius: 15px;
-	--active-color: #499d2f;
-	--inactive-color: #555b69;
-	--title-background-color: #4e2ecf;
-	--border-color: #6363ff;
-	--main-button-color: #524eee;
+	-webkit-tap-highlight-color: transparent;
 }
 
 button {
